--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,8 +3,8 @@ register:
   controller: App\Controller\AuthController::register
   methods: POST
 
-api:
-  path: /api
+bilemo:
+  path: /bilemo
   controller: App\Controller\AuthController::api
 
 login_check:
