--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -18,11 +18,11 @@ security:
             security: false
 
         login:
-            pattern:  ^/api/login
+            pattern:  ^/login
             stateless: true
             anonymous: true
             json_login:
-                check_path:               /api/login_check
+                check_path:               /login_check
                 success_handler:          lexik_jwt_authentication.handler.authentication_success
                 failure_handler:          lexik_jwt_authentication.handler.authentication_failure
 
@@ -31,7 +31,7 @@ security:
             stateless: true
             anonymous: true
 
-        api:
+        bilemo:
             pattern:  ^/bilemo
             stateless: true
             anonymous: false
