--- a/config/services.yaml
+++ b/config/services.yaml
@@ -25,7 +25,24 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+#    Inutile cf autowiring
     App\Doctrine\CustomerUserExtension:
         tags:
             - { name: api_platform.doctrine.orm.query_extension.collection, priority: 9 }
             - { name: api_platform.doctrine.orm.query_extension.item }
+
+
+    App\Doctrine\CustomerSetUserListener:
+        tags:
+            - {name : doctrine.orm.entity_listener, event: 'prePersist'}
+
+#    App\Serializer\UserBuilder:
+#        decorates: 'api_platform.serializer.context_builder'
+#        arguments: [ '@App\Serializer\UserBuilder.inner' ]
+#        autoconfigure: false
+#    App\Serializer\UserDenormalizer:
+#        arguments:
+#            - '@api_platform.jsonld.normalizer.item'
+#            - '@App\Repository\UserRepository'
+#        tags:
+#            - {name: serializer.normalizer, priority: 17}
