--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -6,12 +6,12 @@ security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
         # used to reload user from session & other features (e.g. switch_user)
-#        app_user_provider:
+        # app_user_provider:
         entity_provider:
             entity:
                 class: App\Entity\Customer
                 property: name
-#                property: uuid
+
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -48,8 +48,8 @@ security:
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
-    access_control:
-        - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/register, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/bilemo/docs, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/bilemo, roles: IS_AUTHENTICATED_FULLY }
+#    access_control:
+#        - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+#        - { path: ^/register, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+#        - { path: ^/docs, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+#        - { path: ^/bilemo, roles: IS_AUTHENTICATED_FULLY }
