--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -30,3 +30,8 @@ api_platform:
             mime_types:
                 - application/ld+json
 
+    http_cache:
+        max_age: 0
+        shared_max_age: 3600
+        vary: ['Content-Type', 'Authorization', 'Origin']
+        public: true
