--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -34,7 +34,7 @@ security:
         bilemo:
             pattern:  ^/bilemo
             stateless: true
-            anonymous: true
+            anonymous: false
             provider: entity_provider
             guard:
                  authenticators:
@@ -48,7 +48,7 @@ security:
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
-#    access_control:
+    access_control:
 #        - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
 #        - { path: ^/register, roles: IS_AUTHENTICATED_ANONYMOUSLY }
 #        - { path: ^/docs, roles: IS_AUTHENTICATED_ANONYMOUSLY }
